<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mekong.ditagis.com.qlts.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitle=""
            app:title="" />


    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/content"
        layout="@layout/content" />

    <LinearLayout
        android:id="@+id/layoutLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="60dp"
        android:background="@drawable/layout_shape"
        android:orientation="vertical"
        android:padding="@dimen/padding_title_popup"
        android:visibility="invisible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnLayerClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/white"
                android:contentDescription="Đóng popup"
                android:src="@drawable/ic_cancel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Chọn bản đồ nền"
                android:textColor="@color/colorBlack" />
        </FrameLayout>
        <!--chọn bản đồ nền-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">


            <LinearLayout
                android:id="@+id/layoutLayerOpenStreetMap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_title_popup"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgLayerOpenStreetMap"
                    android:layout_width="64dp"
                    android:layout_height="50dp"
                    android:background="@drawable/layout_shape_basemap"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/open_street_map" />

                <TextView
                    android:id="@+id/txtLayerOpenStreetMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_layer_margin"
                    android:text="@string/title_layer_default"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLayerStreetMap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_title_popup"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgLayerStreetMap"
                    android:layout_width="64dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/street_map" />

                <TextView
                    android:id="@+id/txtLayerStreetMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_layer_margin"
                    android:text="@string/title_layer_street"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLayerTopo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/padding_title_popup"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgLayerTopo"
                    android:layout_width="64dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/imagery_with_labels" />

                <TextView
                    android:id="@+id/txtLayerTopo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_layer_margin"
                    android:text="@string/title_layer_satellite"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@android:color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cbLayerHanhChinh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Ẩn/hiện dữ liệu hành chính"
                        android:textColor="@color/colorTextColor_1" />


                </FrameLayout>
                <SeekBar
                    android:id="@+id/skbrHanhchinhLayers"
                    style="@style/MySeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="100"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/linnearDisplayLayerBaseMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:background="@android:color/black" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cbLayerTaiSan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Ẩn/hiện lớp dữ liệu tài sản"
                        android:textColor="@color/colorTextColor_1" />


                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linnearDisplayLayerTaiSan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatBtnLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="70dp"
        android:src="@drawable/layer"
        android:visibility="visible"
        app:backgroundTint="@android:color/white" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatBtnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="50dp"
        android:src="@drawable/location"
        android:visibility="visible"
        app:backgroundTint="@android:color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
